--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>HelloGitHub</title>
     </head>
     <body>
-      <p>Hello GitHub!!</p>
+      <h1>Hello GitHub!!</h1>
     </body>
 </html>
