--- a/test.html
+++ b/test.html
@@ -11,12 +11,7 @@
         <title>Test</title>
     </head>
     <body>
-<<<<<<< HEAD
       <h1>Test</h1>
-      <p>test</p>
-=======
-        <h1>Test</h1>
-        <p>test</p>
->>>>>>> adc7f5f0eb2752487a8e01ef4b8291d10da1da01
+      <p>test for vsc</p>
     </body>
 </html>
